2003-10-08  Braden McDaniel  <braden@endoframe.com>

	* configure.ac:  Removed useless checks for zlib, libpng, and
	libjpeg.

2003-10-08  Braden McDaniel  <braden@endoframe.com>

	Moved relocate member function from node to child_node.

	* src/libopenvrml/openvrml/browser.cpp
	* src/libopenvrml/openvrml/node.cpp
	* src/libopenvrml/openvrml/node.h
	* src/libopenvrml/openvrml/vrml97node.cpp

2003-10-07  Braden McDaniel  <braden@endoframe.com>

	Quelled some warnings from gcc.

	* src/libopenvrml/openvrml/vrml97node.cpp
	* src/libopenvrml-gl/openvrml/gl/viewer.cpp

2003-09-30  Braden McDaniel  <braden@endoframe.com>

	Replace field_value_ptr, node_class_ptr, node_type_ptr, and
	scope_ptr with instances of boost::shared_ptr.

	* openvrml.spec.in
	* src/libopenvrml/openvrml/Makefile.am
	* src/libopenvrml/openvrml/Vrml97Parser.cpp
	* src/libopenvrml/openvrml/Vrml97Parser.g
	* src/libopenvrml/openvrml/Vrml97Parser.hpp
	* src/libopenvrml/openvrml/browser.cpp
	* src/libopenvrml/openvrml/browser.h
	* src/libopenvrml/openvrml/field.h
	* src/libopenvrml/openvrml/field_value_ptr.cpp
	* src/libopenvrml/openvrml/field_value_ptr.h
	* src/libopenvrml/openvrml/node.h
	* src/libopenvrml/openvrml/node_class_ptr.cpp
	* src/libopenvrml/openvrml/node_class_ptr.h
	* src/libopenvrml/openvrml/node_type_ptr.cpp
	* src/libopenvrml/openvrml/node_type_ptr.h
	* src/libopenvrml/openvrml/private.h
	* src/libopenvrml/openvrml/scope.h
	* src/libopenvrml/openvrml/scope_ptr.cpp
	* src/libopenvrml/openvrml/scope_ptr.h
	* src/libopenvrml/openvrml/script.cpp
	* src/libopenvrml/openvrml/script.h
	* src/libopenvrml/openvrml/vrml97node.cpp

2003-09-30  Braden McDaniel  <braden@endoframe.com>

	Merge from 0.14.1.

	* src/libopenvrml/openvrml/private.h:  Allow for 10 rounding
	errors in computation of floating point error tolerance.

2003-09-28  Braden McDaniel  <braden@endoframe.com>

	Updated version to 0.14.99.

	* README
	* configure.ac

2003-09-28  Braden McDaniel  <braden@endoframe.com>
